# rdkafka-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  fs.rs  log.rs  main.rs
