[package]
name = "rdkafka-cli"
version = "0.1.0"
edition = "2021"
description = "A command line tool for interacting with Kafka"
homepage = "https://github.com/rawnly/rdkafka-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
clap = { version = "4.3.11", features = ["derive", "env"] }
rdkafka = { version = "0.33.2", features = [
    "zstd",
    "sasl",
    "tracing",
    "cmake-build",
    "ssl",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_yaml = "0.9.22"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
    "serde",
    "serde_json",
] }
